// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 > *:not(:last-child) {
  margin-bottom: 1.5rem;
}

.emotion-4 {
  display: block;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-Set fp-FieldSet"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
</div>
`;

exports[`composition hook should return with FieldSet props 1`] = `
Object {
  "className": "css-1tsdp7n css-w4rn5t css-1pwrqjj css-3ekj6a fp-Box fp-Set fp-FieldSet",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 > *:not(:last-child) {
  margin-bottom: 1.5rem;
}

.emotion-4 {
  display: block;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-Set fp-FieldSet"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 > *:not(:last-child) {
  margin-bottom: 1.5rem;
}

.emotion-4 {
  display: block;
}

.emotion-7 {
  color: #3722ed !important;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-7 test fp-Box fp-Set fp-FieldSet"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 > *:not(:last-child) {
  margin-bottom: 1.5rem;
}

.emotion-4 {
  display: block;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-Set fp-FieldSet"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 > *:not(:last-child) {
  margin-bottom: 1.5rem;
}

.emotion-4 {
  display: block;
}

.emotion-7 {
  color: #3722ed !important;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-7 fp-Box fp-Set fp-FieldSet"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
</div>
`;

exports[`props should render correctly with isHorizontal prop 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -1.5rem;
  margin-top: -1.5rem;
}

.emotion-5 > * {
  margin-left: 1.5rem;
  margin-top: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media screen and (max-width:768px) {
  .emotion-4 {
    display: block;
    margin-top: 0rem;
  }
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-Set fp-FieldSet"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
</div>
`;

exports[`props should render correctly with spacing prop 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: block;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-Set fp-FieldSet"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
</div>
`;

exports[`theming FieldSet.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 > *:not(:last-child) {
  margin-bottom: 1.5rem;
}

.emotion-4 {
  display: block;
}

.emotion-4 {
  background-color: red;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-Set fp-FieldSet"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
</div>
`;
